[gd_scene load_steps=9 format=3 uid="uid://bwd8ys1cqiick"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_aehhp"]
[ext_resource type="Texture2D" uid="uid://vxx5o4qgtmu3" path="res://textures/jeremyIdleFrame1.png" id="2_27188"]
[ext_resource type="Script" path="res://scenes/GameCamera.gd" id="3_0tykd"]
[ext_resource type="PackedScene" uid="uid://bj8xb7f8u0y33" path="res://light_source.tscn" id="3_lw75g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ryjh"]
height = 32.0

[sub_resource type="Animation" id="Animation_qxyaf"]
resource_name = "light_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightSource:fullLitRadius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.02213),
"update": 0,
"values": [30, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lightSource:fallOffRadius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.05817),
"update": 0,
"values": [30, 35]
}

[sub_resource type="Animation" id="Animation_daje2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightSource:fullLitRadius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lightSource:fallOffRadius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ypsbq"]
_data = {
"RESET": SubResource("Animation_daje2"),
"light_idle": SubResource("Animation_qxyaf")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_aehhp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0ryjh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
texture = ExtResource("2_27188")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_0tykd")

[node name="coyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="lightSource" parent="." instance=ExtResource("3_lw75g")]
position = Vector2(13, -2)
fullLitRadius = 30
fallOffRadius = 60
fallOffCurve = 0.7

[node name="lightAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ypsbq")
}

[connection signal="timeout" from="coyoteTime" to="." method="_on_coyote_time_timeout"]
